--- a/openshift/pipelines/Jenkinsfile
+++ b/openshift/pipelines/Jenkinsfile
@@ -89,6 +89,15 @@ pipeline {
         }
       }
     }
+  stages {
+    stage('final') {
+        steps {
+            echo {
+                    "Finalizando a pipeline"
+                    }
+                }
+            }
+        }
   }
 }
 
