--- a/openshift/pipelines/Jenkinsfile
+++ b/openshift/pipelines/Jenkinsfile
@@ -83,7 +83,7 @@ pipeline {
         script {
             openshift.withCluster() {
                 openshift.withProject() {
-                  openshift.tag("${templateName}:latest", "${templateName}-staging:latest") 
+                  openshift.tag("${templateName}:${env.BUILD_ID}", "${templateName}-staging:${env.BUILD_ID}") 
                 }
             }
         }
