--- a/openshift/pipelines/Jenkinsfile
+++ b/openshift/pipelines/Jenkinsfile
@@ -83,7 +83,7 @@ pipeline {
         script {
             openshift.withCluster() {
                 openshift.withProject() {
-                  openshift.tag("${templateName}:batatinha", "${templateName}-staging:batatinha") 
+                  openshift.tag("${templateName}:batata", "${templateName}-staging:batata") 
                 }
             }
         }
